# ballai-infra

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  AGENTS.md  README.md  atmos.yaml
.cursor/rules/: aws-auth-from-env.mdc
.github/workflows/: terraform-apply-main.yml  terraform-apply.yml  terraform-pr.yml
ansible/: .ansible-lint  .vault-password-file.example  README.md  ansible.cfg  become_password.example  github_token.example  inventory.example  pw.example  pyproject.toml  requirements.txt  requirements.yml
ansible/collections/: requirements.yml
ansible/group_vars/all/: vault.yml.example
ansible/host_vars/: ballew-4.yml  m1-mac-mini.yml  macbookpro.yml
ansible/playbooks/: github_actions_runner.yml  github_actions_runner_mac.yml
ansible/roles/: README.md
ansible/roles/monolithprojects.github_actions_runner/meta/: main.yml
ansible/roles/monolithprojects.github_actions_runner/tasks/: collect_info.yml  install_runner_unix.yml  install_runner_win.yml  resolve_github_url.yml  uninstall_runner_unix.yml  uninstall_runner_win.yml
ansible/scripts/: sync_ansible_secrets_from_aws.sh
ansible/templates/: runner-launchdaemon.plist.j2
environments/prod/: .terraform.lock.hcl  README.md  backend.tf  backend.tf.example  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
modules/ballai-worker/: main.tf  outputs.tf  variables.tf
modules/github-actions-codebuild-runners/: README.md  main.tf  outputs.tf  variables.tf
modules/service-agent-memory/: main.tf  (+4 more)
scripts/: aws-env.sh  git-no-gpg-sign.sh  terraform-preflight.sh
(+32 files in other folders)
