[project]
name = "ballai-infra-ansible"
version = "0.0.0"
description = "Controller deps for ballai-infra Ansible playbooks"
requires-python = ">=3.12"
dependencies = [
  "ansible-core>=2.20,<3",
  # amazon.aws lookups; keep floor near current boto3 (1.42.x as of 2026-03).
  "boto3>=1.42.73",
]

[tool.uv]
# Default venv lives at ansible/.venv when you run `uv sync` from this directory.
